notaikr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notaikr
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: notaikr
  template:
    metadata:
      labels:
        app: notaikr
    spec:
      containers:
        - name: notaikr
          image: ghcr.io/pmh-only/notaikr:latest
