notaikr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: notaikr-service
spec:
  selector:
    app: notaikr
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
